logs/scheduler/2025-01-14/DAG_CsvToJson.py.log
[2025-01-13T22:02:24.819-0300] {processor.py:186} INFO - Started process (PID=42284) to work on /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:02:24.820-0300] {processor.py:914} INFO - Processing file /home/lucas/airflow/dags/DAG_CsvToJson.py for tasks to queue
[2025-01-13T22:02:24.821-0300] {logging_mixin.py:190} INFO - [2025-01-13T22:02:24.821-0300] {dagbag.py:588} INFO - Filling up the DagBag from /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:02:24.823-0300] {logging_mixin.py:190} INFO - [2025-01-13T22:02:24.822-0300] {dagbag.py:387} ERROR - Failed to import: /home/lucas/airflow/dags/DAG_CsvToJson.py
Traceback (most recent call last):
  File "/home/lucas/airflow_env/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/lucas/airflow/dags/DAG_CsvToJson.py", line 5
    from airflow.operators.python_operator import
                                                 ^
SyntaxError: invalid syntax
[2025-01-13T22:02:24.824-0300] {processor.py:927} WARNING - No viable dags retrieved from /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:02:24.834-0300] {processor.py:208} INFO - Processing /home/lucas/airflow/dags/DAG_CsvToJson.py took 0.018 seconds
[2025-01-13T22:03:20.812-0300] {processor.py:186} INFO - Started process (PID=42441) to work on /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:03:20.812-0300] {processor.py:914} INFO - Processing file /home/lucas/airflow/dags/DAG_CsvToJson.py for tasks to queue
[2025-01-13T22:03:20.813-0300] {logging_mixin.py:190} INFO - [2025-01-13T22:03:20.813-0300] {dagbag.py:588} INFO - Filling up the DagBag from /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:03:20.815-0300] {logging_mixin.py:190} INFO - [2025-01-13T22:03:20.814-0300] {dagbag.py:387} ERROR - Failed to import: /home/lucas/airflow/dags/DAG_CsvToJson.py
Traceback (most recent call last):
  File "/home/lucas/airflow_env/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/lucas/airflow/dags/DAG_CsvToJson.py", line 5
    from airflow.operators.python_operator import
                                                 ^
SyntaxError: invalid syntax
[2025-01-13T22:03:20.815-0300] {processor.py:927} WARNING - No viable dags retrieved from /home/lucas/airflow/dags/DAG_CsvToJson.py
[2025-01-13T22:03:20.836-0300] {processor.py:208} INFO - Processing /home/lucas/airflow/dags/DAG_CsvToJson.py took 0.028 seconds
